--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <<!DOCTYPE html>
 <html>
   <head>
-    <title>vchat - a simple video chat app</title>
+    <title>Video Chat For Friends - VCFF</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://webrtc.github.io/adapter/adapter-4.2.2.js"></script>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1><a href="/">vchat</a></h1>
-        <h2><a href="/">a simple video chat app</a></h2>
+        <h1><a href="/">Video Chat For Friends - VCFF</a></h1>
       </header>
       <div id="okta-login-container"></div>
       <div class="row">
@@ -26,15 +27,16 @@
       <div id="remotes" class="row">
         <div class="col-md-6">
           <div class="videoContainer">
-            <video id="selfVideo"></video>
-            <meter id="localVolume" class="volume"></meter>
+            <video id="selfVideo" oncontextmenu="return false"</video>
+            <meter id="localVolume" class="volume" min="-45" max="-20" high="-25" low="-40"></meter>
           </div>
         </div>
       </div>
     </div>
     <footer>
-      <p>Hacked together by <a href="https://twitter.com/rdegges">@rdegges</a>
-        and <a href="https://twitter.com/oktadev">@oktadev</a>.</p>
+      <p>Coded by <a href="https://twitter.com/zmanskiles7">@zmanskiles7</a>
+        and <a href="https://github.com/jiena76">Jieun Lee</a>.</p>
     </footer>
+    <script src="source/loadSimpleWebRTC.js"></script>
   </body>
 </html>
