start website beaver tutorial

--- a/index.html
+++ b/index.html
@@ -38,5 +38,19 @@
         and <a href="https://github.com/jiena76">Jieun Lee</a>.</p>
     </footer>
     <script src="source/loadSimpleWebRTC.js"></script>
+    
+    <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
+    <script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyCQRpQtXbKYoac8y6ssgPno11-jdR71WQY",
+        authDomain: "special-disco.firebaseapp.com",
+        databaseURL: "https://special-disco.firebaseio.com",
+        projectId: "special-disco",
+        storageBucket: "special-disco.appspot.com",
+        messagingSenderId: "87258023656"
+    };
+    firebase.initializeApp(config);
+    </script>
   </body>
 </html>
