changed some very minor things about the CSS, more to come

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <<!DOCTYPE html>
 <html>
   <head>
-    <title>Video Chat For Friends - VCFF</title>
+    <title>VSIDE</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <script src="https://webrtc.github.io/adapter/adapter-4.2.2.js"></script>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1><a href="/">Video Chat For Friends - VCFF</a></h1>
+        <h1 class="name"><a href="/">VSIDE</a></h1>
+        <p>A Video Chat For Friends</p>
       </header>
       <div id="okta-login-container"></div>
       <div class="row">
