--- a/index.html
+++ b/index.html
@@ -1,58 +1,14 @@
-<<!DOCTYPE html>
 <html>
   <head>
-    <title>VSIDE</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
-    <script src="https://webrtc.github.io/adapter/adapter-4.2.2.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1 class="name"><a href="/">VSIDE</a></h1>
-        <p>A Video Chat For Friends</p>
-      </header>
-      <div id="okta-login-container"></div>
-      <div class="row">
-        <div class="col"></div>
-        <div class="col-md-auto align-self-center">
-          <p id="login"><b>NOTE</b>: You are not currently logged in. If you'd like to start your own
-            chat room please <button type="button" class="btn btn-light">log in</button></p>
-          <div id="url" class="alert alert-dark" role="alert">
-            <span id="roomIntro">ROOM URL</span>: <span id="roomUrl"></span>
-          </div>
-        </div>
-        <div class="col"></div>
-      </div>
-      <div id="remotes" class="row">
-        <div class="col-md-6">
-          <div class="videoContainer">
-            <video id="selfVideo" oncontextmenu="return false"</video>
-            <meter id="localVolume" class="volume" min="-45" max="-20" high="-25" low="-40"></meter>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <p>Coded by <a href="https://twitter.com/zmanskiles7">@zmanskiles7</a>
-        and <a href="https://github.com/jiena76">Jieun Lee</a>.</p>
-    </footer>
-    <script src="source/loadSimpleWebRTC.js"></script>
-    
-    <script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
-    <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyCQRpQtXbKYoac8y6ssgPno11-jdR71WQY",
-        authDomain: "special-disco.firebaseapp.com",
-        databaseURL: "https://special-disco.firebaseio.com",
-        projectId: "special-disco",
-        storageBucket: "special-disco.appspot.com",
-        messagingSenderId: "87258023656"
-    };
-    firebase.initializeApp(config);
-    </script>
+  <body onload="showMyFace()">
+    <video id="yourVideo" autoplay muted playsinline></video>
+    <video id="friendsVideo" autoplay playsinline></video>
+    <br />
+    <button onclick="showFriendsFace()" type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Call</button>
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
