--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body onload="showMyFace()">
-    <h1 class="name">VSIDE</h1>
+    <div class="top">
+      <h1 class="name">VSIDE</h1>
+      <p>A Video Chat For Friends</p>
+    </div>
     <div class="videoContainer">
       <video id="yourVideo" autoplay muted playsinline></video>
       <video id="friendsVideo" autoplay playsinline></video>
