--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <video id="yourVideo" autoplay muted playsinline></video>
       <video id="friendsVideo" autoplay playsinline></video>
       <br />
-      <button onclick="showFriendsFace()" type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Call</button>
+      <button onclick="showFriendsFace()" type="button" class="btn btn-primary btn-lg" style="background-color:#a31f26;"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Call</button>
     </div>
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script src="js/script.js"></script>
